# jobs.moki.codes

./: .clang-format  .gitignore  README.MD  rsync-exclude
service/ETL/: .gdb_history  CMakeLists.txt  ETL.h  README.MD  main.cpp
service/ETL/data/: hh.tsv  moikrug.tsv  profunctor.tsv
service/ETL/debug/: type_name.h
service/ETL/extractor/: extractor.h  hh.h  https.h  moikrug.h  telegram.h
service/ETL/lib/date/: date_main.h  main.h
service/ETL/lib/simdjson/: main.h  simdjson_main.h
service/ETL/loader/: clickhouse.cpp  clickhouse.h  clickhouse.sql  fs.h  hh.h  loader.h  memory.h  moikrug.h  telegram.h
service/ETL/transformer/: hh.h  html.h  moikrug.h  profunctor.h  transformer.h
service/ETL/utility/: split.cpp  split.h
service/common/utility/: trim.h
service/extract_transform_load/: .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
service/extract_transform_load/src/: lib.rs  main.rs
service/extract_transform_load/src/hh/: config.rs  extractor.rs  loader.rs  mod.rs  service.rs  state.rs  transformer.rs
service/extract_transform_load/src/service/: config.rs  mod.rs
service/frontend/: .eslintrc.js  .gitignore  frontend.go  go.mod  go.sum  package.json  tsconfig.json
service/frontend/cmd/serve/: serve.go
service/frontend/pkg/server/: config.go  proxy.go  server.go
service/frontend/src/: index.css  index.html  index.prod.html  index.tsx
service/frontend/src/components/autocomplete/: index.css  index.tsx
service/frontend/src/components/banner/: index.css  index.tsx
service/frontend/src/components/button/: index.css  index.tsx
service/frontend/src/components/component/: index.tsx
service/frontend/src/components/container/: index.css  index.tsx
service/frontend/src/components/footer/: index.css  index.tsx
service/frontend/src/components/header/: index.css  index.tsx
service/frontend/src/components/heading/: index.css  index.tsx
service/frontend/src/components/label/: index.css  index.tsx
service/frontend/src/components/layout/: index.css  index.tsx
service/frontend/src/components/loader/: index.css  index.tsx
service/frontend/src/components/main/: index.tsx
service/frontend/src/components/section/: index.css  index.tsx
service/frontend/src/components/select/: index.css  index.tsx
service/frontend/src/components/sub-heading/: index.css  index.tsx
service/frontend/src/components/text/: index.css  index.tsx
service/frontend/src/components/text-field/: index.css  index.tsx
service/frontend/src/components/theme/: index.css  index.tsx
service/frontend/src/fetcher/: hook.tsx  index.tsx  reducer.tsx
service/frontend/src/hooks/use-outside-event-awareness/: index.tsx
service/frontend/src/pages/home/: index.css  index.tsx
service/frontend/src/pages/home/contacts/: index.css  index.tsx
service/frontend/src/pages/home/introduction/: index.tsx
service/frontend/src/pages/home/salaries/: distribution-graph.css  distribution-graph.tsx  distribution.css  distribution.tsx  index.tsx
service/frontend/src/pages/home/skills/: dominance-graph.css  dominance-graph.tsx  dominance.css  dominance.tsx  graph.tsx  index.tsx  (+4 more)
service/frontend/src/palette/: index.tsx
service/frontend/src/size-observer/: hook.tsx  index.tsx
service/frontend/src/trie/: index.tsx
service/frontend/src/util/: prand-int-in-range.tsx  zip.tsx
service/server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
service/server/src/: lib.rs  main.rs
service/server/src/salaries/: handlers.rs
service/server/src/service/: config.rs
service/server/src/skills/: handlers.rs
service/server/src/stats/: mod.rs  quartiles.rs
(+2 files in other folders)
