[package]
name = "extract_transform_load"
version = "0.1.0"
authors = ["Kirill Morozov (moki) <morozov.kirill.moki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.13"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
