[package]
name = "server"
version = "0.1.0"
authors = ["Kirill Morozov (moki) <morozov.kirill.moki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", branch = "async-await", features = ["tokio_io"] }
futures = "0.3"
tokio = { version = "1.6", features = ["full"] }
chrono = "0.4.*"
chrono-tz = "*"
serde = "*"
serde_yaml = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
